slight code corrections

--- a/Webpage/templates/newUser.html
+++ b/Webpage/templates/newUser.html
@@ -156,7 +156,7 @@
             </div>
             <div class="row d-flex justify-content-around">
                 <div class="col-sm-7 infoRequest">
-                    <form action="api.hartzlerhome.solutions/newLandlord" name="inquiryForm" id='newUserSignup' method="POST">
+                    <form action="http://api.hartzlerhome.solutions/newLandlord" name="inquiryForm" id='newUserSignup' method="POST">
                         <div class="row">
                             <div class="col-md-6">
                                 {{ form.firstName(class="inputField", onfocusout="validate(this)") }}
