--- a/Webpage/templates/newUser.html
+++ b/Webpage/templates/newUser.html
@@ -2,145 +2,153 @@
 
 {% block pageInfo %}
 
-    <style type="text/css" rel="stylesheet/css">
-        /* .navbar-dark{
+<style type="text/css" rel="stylesheet/css">
+    /* .navbar-dark{
+        
+    } */
+    .secondary-nav-item {
+        color:#212529; /* @tertiaryColor */
+    }
+    .secondNavbar {
+        
+        box-shadow: 0px 5px 8px grey;
+    }
+    main {
+        margin-top: calc(max(5vh, 50px) + 83px);
+        padding-top: 30px;
+    }
+    main h1, main h2,.contactUs p {
+        text-align: center;
+        margin:15px 0px;
+    }
+    .contactUs{
+        max-width: 90%;
+    }
+    .team, .cc {
+        margin: 10px 0;
+        width: 100%;
+    }
+
+    .cc div{
+        padding:0px;
+        margin: 0px 2px;
+        width: 100%;
+        max-width: 100%;
+        max-height:100%;
+    }
+    form{
+        padding: 20px;
+        border-radius: 7px;
+        border: 3px solid #212529;
+        margin-bottom: 50px;
+    }        
+    #loadingSpinner {
+        top: 0;
+        left: 0;
+        max-width: 100%;
+        max-height:100%;
+    }
+    .hide {
+        display: none;
+    }
+    
+</style>
+<script type="text/javascript">
+    function ValidateEmail(input) {
+        var mailformat = /(?:[a-z0-9!#$%&'*+/=?^_`{|}~-]+(?:\.[a-z0-9!#$%&'*+/=?^_`{|}~-]+)*|"(?:[\x01-\x08\x0b\x0c\x0e-\x1f\x21\x23-\x5b\x5d-\x7f]|\\[\x01-\x09\x0b\x0c\x0e-\x7f])*")@(?:(?:[a-z0-9](?:[a-z0-9-]*[a-z0-9])?\.)+[a-z0-9](?:[a-z0-9-]*[a-z0-9])?|\[(?:(?:25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?)\.){3}(?:25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?|[a-z0-9-]*[a-z0-9]:(?:[\x01-\x08\x0b\x0c\x0e-\x1f\x21-\x5a\x53-\x7f]|\\[\x01-\x09\x0b\x0c\x0e-\x7f])+)\])/
+        if (mailformat.test(input.value)) {
+            input.setAttribute("class","satisfiedInputField");    //The pop up alert for a valid email address
+            // document.inquiryForm.getElementById("emailAddress").focus();
+            readyToSubmit()
+            return true;
+        }
+        else if (input.value!="" || (input.value=="" && input.hasAttribute("required"))) {
+            // alert("You have entered an invalid email address!");    //The pop up alert for an invalid email address
+            input.setAttribute("class","emptyInputField");
+            // document.getElementById("emailAddress").focus();
+            return false;
+        }
+        else {
+            input.setAttribute("class","inputField")
+            readyToSubmit()
+            return true;
+        }
+    }
+    function validate(input) {
+        // var mailformat = /^w+([.-]?w+)*@w+([.-]?w+)*(.w{2,3})+$/;
+        
+        if (/^[a-zA-Z0-9&+?_`~-]/.test(input.value)) {
+            input.setAttribute("class","satisfiedInputField");    //The pop up alert for a valid email address
+            // document.inquiryForm.getElementById("emailAddress").focus();
+            readyToSubmit()
+            return true;
+        }
+        else if (input.value!="" || (input.value=="" && input.hasAttribute("required"))) {
+            // alert("You have entered an invalid email address!");    //The pop up alert for an invalid email address
+            input.setAttribute("class","emptyInputField");
             
-        } */
-        .secondary-nav-item {
-            color:#212529; /* @tertiaryColor */
+            // document.getElementById("emailAddress").focus();
+            return false;
         }
-        .secondNavbar {
-            
-            box-shadow: 0px 5px 8px grey;
+        else {
+            input.setAttribute("class","inputField")
+            readyToSubmit()
+            return true;
         }
-        main {
-            margin-top: calc(max(5vh, 50px) + 83px);
-            padding-top: 30px;
+    }
+    function readyToSubmit() {
+        for (const ele of document.getElementById("newUserSignup").querySelectorAll("[required]")) {
+            if (!ele.reportValidity()) {
+                return;
+            }
         }
-        main h1, main h2,.contactUs p {
-            text-align: center;
-            margin:15px 0px;
+        document.getElementById("submitButton").disabled=false
+    }
+    
+    function checkPasswords(input) {
+        // alert(document.getElementById("password").value)
+        if (input.value != document.getElementById("password").value) {
+            input.setAttribute("class","emptyInputField")
+            // alert("The passwords do not match.")
+            document.getElementById("userMessage").setAttribute("class", "danger")//alert("You have entered an invalid email address!");    //The pop up alert for an invalid email address
+            document.getElementById("userMessage").innerText = "The passwords do not match!"
+
+            return false;
         }
-        .contactUs{
-            max-width: 90%;
+        else if (input.value == document.getElementById("password").value){
+            input.setAttribute("class","satisfiedInputField")
+            document.getElementById("userMessage").setAttribute("class", "")
+            document.getElementById("userMessage").innerHTML = ""
+            return true;
         }
-        .team, .cc {
-            margin: 10px 0;
-            width: 100%;
+        else {
+            input.setAttribute("class","inputField")
+            return true;
         }
 
-        .cc div{
-            padding:0px;
-            margin: 0px 2px;
-            width: 100%;
-            max-width: 100%;
-            max-height:100%;
-        }
-        form{
-            padding: 20px;
-            border-radius: 7px;
-            border: 3px solid #212529;
-            margin-bottom: 50px;
-        }        
-        
-        
-    </style>
-    <script type="text/javascript">
-        function ValidateEmail(input) {
-            var mailformat = /(?:[a-z0-9!#$%&'*+/=?^_`{|}~-]+(?:\.[a-z0-9!#$%&'*+/=?^_`{|}~-]+)*|"(?:[\x01-\x08\x0b\x0c\x0e-\x1f\x21\x23-\x5b\x5d-\x7f]|\\[\x01-\x09\x0b\x0c\x0e-\x7f])*")@(?:(?:[a-z0-9](?:[a-z0-9-]*[a-z0-9])?\.)+[a-z0-9](?:[a-z0-9-]*[a-z0-9])?|\[(?:(?:25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?)\.){3}(?:25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?|[a-z0-9-]*[a-z0-9]:(?:[\x01-\x08\x0b\x0c\x0e-\x1f\x21-\x5a\x53-\x7f]|\\[\x01-\x09\x0b\x0c\x0e-\x7f])+)\])/
-            if (mailformat.test(input.value)) {
-                input.setAttribute("class","satisfiedInputField");    //The pop up alert for a valid email address
-                // document.inquiryForm.getElementById("emailAddress").focus();
-                readyToSubmit()
-                return true;
-            }
-            else if (input.value!="" || (input.value=="" && input.hasAttribute("required"))) {
-                // alert("You have entered an invalid email address!");    //The pop up alert for an invalid email address
-                input.setAttribute("class","emptyInputField");
-                // document.getElementById("emailAddress").focus();
-                return false;
-            }
-            else {
-                input.setAttribute("class","inputField")
-                readyToSubmit()
-                return true;
-            }
-        }
-        function validate(input) {
-            // var mailformat = /^w+([.-]?w+)*@w+([.-]?w+)*(.w{2,3})+$/;
-            
-            if (/^[a-zA-Z0-9&+?_`~-]/.test(input.value)) {
-                input.setAttribute("class","satisfiedInputField");    //The pop up alert for a valid email address
-                // document.inquiryForm.getElementById("emailAddress").focus();
-                readyToSubmit()
-                return true;
-            }
-            else if (input.value!="" || (input.value=="" && input.hasAttribute("required"))) {
-                // alert("You have entered an invalid email address!");    //The pop up alert for an invalid email address
-                input.setAttribute("class","emptyInputField");
-                
-                // document.getElementById("emailAddress").focus();
-                return false;
-            }
-            else {
-                input.setAttribute("class","inputField")
-                readyToSubmit()
-                return true;
-            }
-        }
-        function readyToSubmit() {
-            for (const ele of document.getElementById("newUserSignup").querySelectorAll("[required]")) {
-                if (!ele.reportValidity()) {
-                    return;
-                }
-            }
-            document.getElementById("submitButton").disabled=false
-        }
-        
-        function checkPasswords(input) {
-            // alert(document.getElementById("password").value)
-            if (input.value != document.getElementById("password").value) {
-                input.setAttribute("class","emptyInputField")
-                // alert("The passwords do not match.")
-                document.getElementById("userMessage").setAttribute("class", "danger")//alert("You have entered an invalid email address!");    //The pop up alert for an invalid email address
-                document.getElementById("userMessage").innerText = "The passwords do not match!"
-
-                return false;
-            }
-            else if (input.value == document.getElementById("password").value){
-                input.setAttribute("class","satisfiedInputField")
-                document.getElementById("userMessage").setAttribute("class", "")
-                document.getElementById("userMessage").innerHTML = ""
-                return true;
-            }
-            else {
-                input.setAttribute("class","inputField")
-                return true;
-            }
-
-        }
-        function validateSubmit(input) {
-            // var mailformat = /^w+([.-]?w+)*@w+([.-]?w+)*(.w{2,3})+$/;
-            alert(input)
-            // if (/^[a-zA-Z0-9&+?_`~-]/.test(input.value)) {
-            //     input.setAttribute("class","satisfiedInputField");    //The pop up alert for a valid email address
-            //     // document.inquiryForm.getElementById("emailAddress").focus();
-            //     return true;
-            // }
-            // else if (input.value!="" || (input.value=="" && input.hasAttribute("required"))) {
-            //     // alert("You have entered an invalid email address!");    //The pop up alert for an invalid email address
-            //     input.setAttribute("class","emptyInputField");
-            //     // document.getElementById("emailAddress").focus();
-            //     return false;
-            // }
-            // else {
-            //     input.setAttribute("class","inputField")
-            //     return true;
-            // }
-        }
+    }
+    // function validateSubmit(input) {
+    //     // var mailformat = /^w+([.-]?w+)*@w+([.-]?w+)*(.w{2,3})+$/;
+    //     alert(input)
+    //     // if (/^[a-zA-Z0-9&+?_`~-]/.test(input.value)) {
+    //     //     input.setAttribute("class","satisfiedInputField");    //The pop up alert for a valid email address
+    //     //     // document.inquiryForm.getElementById("emailAddress").focus();
+    //     //     return true;
+    //     // }
+    //     // else if (input.value!="" || (input.value=="" && input.hasAttribute("required"))) {
+    //     //     // alert("You have entered an invalid email address!");    //The pop up alert for an invalid email address
+    //     //     input.setAttribute("class","emptyInputField");
+    //     //     // document.getElementById("emailAddress").focus();
+    //     //     return false;
+    //     // }
+    //     // else {
+    //         //     input.setAttribute("class","inputField")
+    //         //     return true;
+    //         // }
+    //     }
         
 
-    </script>
+</script>
 {% endblock %}
 
 
@@ -156,7 +164,7 @@
             </div>
             <div class="row d-flex justify-content-around">
                 <div class="col-sm-7 infoRequest">
-                    <form action="http://api.hartzlerhome.solutions/newLandlord" name="inquiryForm" id='newUserSignup' method="POST">
+                    <form action="" name="inquiryForm" id="newUserSignup">
                         <div class="row">
                             <div class="col-md-6">
                                 {{ form.firstName(class="inputField", onfocusout="validate(this)") }}
@@ -212,8 +220,8 @@
                         </div>
                         <div class="row">
                             <div class="col">
-                                {{ form.companyPhoneNumber(class="inputField", onfocusout="validate(this)") }}
-                                {{ form.companyPhoneNumber.label(class="inputLabel") }}
+                                {{ form.companyPhone(class="inputField", onfocusout="validate(this)") }}
+                                {{ form.companyPhone.label(class="inputLabel") }}
                             </div>
                             
                         </div>
@@ -253,11 +261,75 @@
 
                         <div class="row">
                             <div class="col col-sm-5">
-                                <button class="nav-button" id="submitButton" disabled onclick="validateSubmit('contactUsForm')">Create</button>
+                                <button class="nav-button" id="submitButton" disabled>Create</button>
+                            </div>
+                            <div class="col col-sm-6">
+                                
+                            </div>
+                            <div class="col col-sm-1">
+                                <img src="{{ url_for('static', filename = 'media/spinner.gif') }}" alt="" id="loadingSpinner" class = "hide">
                             </div>
                             
                         </div>
                     </form>
+                    <script type="text/javascript">
+                        
+                        function buildJsonData(form) {
+                            const jsonData = { 'additionalDetails':{ } , 'address': { } };
+                            const addressInfo = ['houseNumber', 'streetName','city','state','zipCode','apptNo']
+                            const details = ['address','firstName', 'lastName', 'phoneNumber', 'emailAddress', 'password','companyName', 'companyPhone']
+                            const junk = ['password_confirm']
+                            
+                            for (const pair of new FormData(form)) {
+                                if (addressInfo.includes(pair[0])) {
+                                    jsonData['address'][pair[0]] = pair[1];
+                                }else if (details.includes(pair[0])) {
+                                    jsonData[pair[0]] = pair[1];
+                                }else if (!junk.includes(pair[0])){
+                                    jsonData['additionalDetails'][pair[0]] = pair[1];
+                                }
+                            };
+                            return jsonData
+                        }
+                        
+                        function buildHeaders() {
+                            const headers = {
+                                "Content-Type": "application/json",
+                            };
+                            return headers;
+                        }
+                        
+                        async function submitForm(e, form) {
+                            // 1. Prevent reloading the page
+                            e.preventDefault();
+                            // 2. Submit the form
+                            // 2.1 User Interaction
+                            const submitBtn = document.getElementById('submitButton');
+                            const spinner = document.getElementById('loadingSpinner');
+                            submitBtn.disabled = true;
+                            spinner.classList.remove('hide');
+                            
+                            setTimeout(() => submitBtn.disabled = false, 2400);
+                            setTimeout(() => spinner.classList.add('hide'), 2400);
+                            // 2.2 Build JSON data
+                            const jsonData = buildJsonData(form);
+                            
+                            const headers = buildHeaders();
+                            
+                            const response = await submitPostHttpRequest(`http://api.hartzlerhome.solutions/newLandlord`, headers, jsonData);
+                            console.log(response);
+                            
+                            // if (response)
+                        }
+                        
+                        const newUserForm = document.querySelector("#newUserSignup");
+                        console.log(newUserForm)
+                        if (newUserForm) {
+                            newUserForm.addEventListener("submit", function(e) {
+                                submitForm(e, this);
+                            });
+                        }
+                    </script>
                 </div>
             </div>
         </div>
