--- a/Webpage/templates/login.html
+++ b/Webpage/templates/login.html
@@ -159,7 +159,7 @@
                         
                         <div class="row">
                             <div class="col">
-                                <a href = "/newUser.html" class = 'nav-button center'>Create New Account</a>
+                                <a href = "/newUser" class = 'nav-button center'>Create New Account</a>
                             </div>
                         </div>
                     </form>
