--- a/Webpage/templates/newUser.html
+++ b/Webpage/templates/newUser.html
@@ -295,7 +295,7 @@
                         function buildHeaders() {
                             const headers = {
                                 "Content-Type": "application/json",
-                                "Access-Control-Allow-Origin": '*'
+                                // "Access-Control-Allow-Origin": '*'
                             };
                             return headers;
                         }
