upates to UI for login and new account (#21) added endpoint for login and session checking - completed #22 fixed ORM issues and renamed sessionsOfUser

--- a/Webpage/templates/login.html
+++ b/Webpage/templates/login.html
@@ -49,19 +49,21 @@
     </style>
     <script type="text/javascript">
         function ValidateEmail(input) {
+            const loginMessage = document.getElementById("loginMessage")
             var mailformat = /(?:[a-z0-9!#$%&'*+/=?^_`{|}~-]+(?:\.[a-z0-9!#$%&'*+/=?^_`{|}~-]+)*|"(?:[\x01-\x08\x0b\x0c\x0e-\x1f\x21\x23-\x5b\x5d-\x7f]|\\[\x01-\x09\x0b\x0c\x0e-\x7f])*")@(?:(?:[a-z0-9](?:[a-z0-9-]*[a-z0-9])?\.)+[a-z0-9](?:[a-z0-9-]*[a-z0-9])?|\[(?:(?:25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?)\.){3}(?:25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?|[a-z0-9-]*[a-z0-9]:(?:[\x01-\x08\x0b\x0c\x0e-\x1f\x21-\x5a\x53-\x7f]|\\[\x01-\x09\x0b\x0c\x0e-\x7f])+)\])/
             if (mailformat.test(input.value.toLowerCase())) {
-                document.getElementById("loginMessage").setAttribute("class", "")
-                document.getElementById("loginMessage").innerHTML = ""
+                loginMessage.setAttribute("class", "")
+                loginMessage.innerHTML = ""
                 input.setAttribute("class","satisfiedInputField");    //The pop up alert for a valid email address
                 // document.inquiryForm.getElementById("emailAddress").focus();
                 return true;
             }
             else if (input.value!="" || (input.value=="" && input.hasAttribute("required"))) {
-                // document.getElementById("loginMessage").setAttribute("class", "danger")//alert("You have entered an invalid email address!");    //The pop up alert for an invalid email address
-                // document.getElementById("loginMessage").innerText = "You must enter a valid email address!"
+                console.log("Input: ", input.innerHTML)
+                loginMessage.setAttribute("class", "danger")//alert("You have entered an invalid email address!");    //The pop up alert for an invalid email address
+                loginMessage.innerText = "Invalid Username: Please enter a valid email address";
                 input.setAttribute("class","emptyInputField");
-                // document.getElementById("emailAddress").focus();
+                // input.focus();
                 return false;
             }
             else {
@@ -128,7 +130,7 @@
                     <form action="#" name="inquiryForm" id='loginForm' method="POST">
                         <div class="row">
                             <div class="col">
-                                <input class="inputField" id="username" name="username" onfocusout="validate(this)" required/><br/>
+                                <input class="inputField" id="username" name="username" oninput="ValidateEmail(this)" required/><br/>
                                 <label class="inputLabel"  for="username">Username</label>
                             </div>
                             
