Update to UI to enable login and logout closes #24

--- a/Webpage/templates/login.html
+++ b/Webpage/templates/login.html
@@ -127,10 +127,11 @@
             </div>
             <div class="row d-flex justify-content-around">
                 <div class="col-sm-7 infoRequest loginEntry">
-                    <form action="#" name="inquiryForm" id='loginForm' method="POST">
+                    <form action="" name="inquiryForm" id='loginForm' method="POST">
                         <div class="row">
                             <div class="col">
-                                <input class="inputField" id="username" name="username" oninput="ValidateEmail(this)" required/><br/>
+
+                                <input class="inputField" id="username" name="username" oninput="ValidateEmail(this)" value="{{username}}" required/><br/>
                                 <label class="inputLabel"  for="username">Username</label>
                             </div>
                             
