--- a/Webpage/templates/unauthorized.html
+++ b/Webpage/templates/unauthorized.html
@@ -57,7 +57,7 @@
         <div class="container">
             <div class="row d-flex justify-content-center">
                 <h1>Forbidden: You don't have access to view this resource!</h1>
-                {% if loggedIn %}<h1>Please login</h1>{% endif %}
+                {% if loggedOut %}<h1>Please login</h1>{% endif %}
             </div>
         </div>
     </div>        
