--- a/Webpage/templates/admin/properties.html
+++ b/Webpage/templates/admin/properties.html
@@ -296,7 +296,7 @@
                     <div class="col col-sm-1">
                         <img src="{{ url_for('static', filename = 'media/spinner.gif') }}" alt="" id="loadingSpinner" class = "hide">
                     </div>
-                    <label id="userMessage" class="userMessage"></label>
+                    <label id="userFormMessage" class="userFormMessage"></label>
                     <button type="button" class="button" tabindex="2" data-bs-dismiss="modal">Cancel</button>
                     <button type="submit" class="button" tabindex="1" id="submitButton" onclick="saveProperty()" disabled>Save</button>
                 </div>
@@ -338,7 +338,7 @@
                 
                 const submitBtn = document.getElementById('submitButton');
                 const spinner = document.getElementById('loadingSpinner');
-                const messageBox = document.getElementById('userMessage');
+                const messageBox = document.getElementById('userFormMessage');
                 submitBtn.disabled = true;
                 spinner.classList.remove('hide');
                 messageBox.setAttribute("class","")
